# cmake-skeleton

./: .gitignore  CMakeLists.txt  README.md
cmake/: gtest.cmake
src/google_sample/: CMakeLists.txt
tests/: CMakeLists.txt
tests/google_sample_tests/: CMakeLists.txt
